package corps.sgoc;

option java_package = "io.corps.sgoc.sync";

message ObjectWrapper {
    // Unique per user graph.
    optional string id = 1;

    // When true, the payload is omitted.
    optional bool deleted = 2;

    // Changes are optimisticly locked by each object's version.
    optional int64 version = 3;

    // Each payload type extends and uses one of these extensions.
    extensions 100 to max;
}

// Used by fields that reference other object wrappers.
message ReferenceId {
    // The referencing id.
    optional string id = 1;
}

message PutRequest {
    // The graph root id.  Usually the user id.
    optional string root_id = 1;
    // Each object being put by this request.
    repeated ObjectWrapper object = 2;
}

message PutResponse {
    // Nothing.
}

message GetRequest {
    // The graph root id.  Usually the user id.
    optional string root_id = 1;
    // The last current_version the client has successfully applied to its state.
    optional int64 applied_version = 2;
}

message GetResponse {
    optional int64 current_version = 1;
    repeated ObjectWrapper changed_object = 2;
}
